# pydantic-ai-tutorial

./: .env.example  README.md  pyproject.toml  tutorial.ipynb
src/: open_whether.py  pydantic_model.py  stream_whales.py
